# sockster

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  del.sh
.github/workflows/: cmake.yml
include/: server.h
src/: server.c  sockster.c
